@@ -4,6 +4,17 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO 
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
 2006/10/30
+	* Modified battle_calc_return_damage to take the skill id as well, now
+	  magic damage return will not work on skills tagged as ground or self
+	  targetted. [Skotlex]
+	* Fixed Gank not working at all with the default max steal tries setting.
+	  [Skotlex]
+	* Soul Drain won't work with skills tagged as self-targetted. [Skotlex]
+	* Improved the Suiton code so that the walk/agi penalty only applies to
+	  enemies of whoever casted the skill. [Skotlex]
+	* Moved the initial status_calc_pc call to when you finish loading the map,
+	  should fix equipment scripts which are based on character variables not
+	  working. [Skotlex]
 	* Fixed getcharid according to samples and docs. [Lupus]
 		Thanks to joshuaali for pointing it out. eAPP has no such bug
 2006/10/27
